--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 :root {
-  --blue: #007bff;
+  /*--blue: #007bff;
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
@@ -19,7 +19,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #0BCEAF;
+  --primary: #0BCEAF; 
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -31,8 +31,8 @@
   --breakpoint-sm: 576px;
   --breakpoint-md: 768px;
   --breakpoint-lg: 992px;
-  --breakpoint-xl: 1200px;
-  --font-family-sans-serif: "Roboto", sans-serif;
+  --breakpoint-xl: 1200px;*/
+  font-family: 'Fira Sans', sans-serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
@@ -55,7 +55,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Fira Sans", sans-serif;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -364,7 +364,7 @@ h1, h2, h3, h4, h5, h6,
   margin-bottom: 0.5rem;
   font-weight: 500;
   line-height: 1.2;
-  color: #343a40;
+  color: aqua;
 }
 
 h1, .h1 {
@@ -2327,12 +2327,12 @@ textarea.form-control {
 .btn {
   display: inline-block;
   font-weight: 400;
-  color: #6c757d;
+  color: #ffffff;
   text-align: center;
   vertical-align: middle;
   user-select: none;
   background-color: transparent;
-  border: 1px solid transparent;
+  border: 2px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
@@ -2370,35 +2370,35 @@ fieldset:disabled a.btn {
 }
 
 .btn-primary {
-  color: #fff;
-  background-color: #0BCEAF;
-  border-color: #0BCEAF;
+  color: #000000 ;
+  background-color: #000;
+  border-color: black ;
 }
 
 .btn-primary:hover {
   color: #fff;
   background-color: #09aa90;
-  border-color: #089e86;
+  border-color: black;
 }
 
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
   background-color: #09aa90;
-  border-color: #089e86;
+  border-color: black;
   box-shadow: 0 0 0 0.2rem rgba(48, 213, 187, 0.5);
 }
 
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
   background-color: #0BCEAF;
-  border-color: #0BCEAF;
+  border-color: black;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
 .show > .btn-primary.dropdown-toggle {
   color: #fff;
   background-color: #089e86;
-  border-color: #08917c;
+  border-color: black;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
@@ -2409,7 +2409,7 @@ fieldset:disabled a.btn {
 .btn-secondary {
   color: #fff;
   background-color: #6c757d;
-  border-color: #6c757d;
+  border-color: #ffffff;
 }
 
 .btn-secondary:hover {
@@ -2592,7 +2592,7 @@ fieldset:disabled a.btn {
 }
 
 .btn-light {
-  color: #212529;
+  color: aqua;
   background-color: #ffffff;
   border-color: #ffffff;
 }
@@ -2858,18 +2858,18 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-light {
-  color: #ffffff;
-  border-color: #ffffff;
+  color: #000000;
+  border-color: #3F826D;
 }
 
 .btn-outline-light:hover {
-  color: #212529;
+  color: #000000;
   background-color: #ffffff;
   border-color: #ffffff;
 }
 
 .btn-outline-light:focus, .btn-outline-light.focus {
-  box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgb(255, 255, 255);
 }
 
 .btn-outline-light.disabled, .btn-outline-light:disabled {
@@ -2886,12 +2886,12 @@ fieldset:disabled a.btn {
 
 .btn-outline-light:not(:disabled):not(.disabled):active:focus, .btn-outline-light:not(:disabled):not(.disabled).active:focus,
 .show > .btn-outline-light.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(255, 255, 255, 0.5);
+  box-shadow: 0 0 0 0.2rem rgb(255, 255, 255);
 }
 
 .btn-outline-dark {
   color: #343a40;
-  border-color: #343a40;
+  border-color: #ffffff;
 }
 
 .btn-outline-dark:hover {
@@ -5825,7 +5825,7 @@ a.close.disabled {
   z-index: 1070;
   display: block;
   margin: 0;
-  font-family: "Roboto", sans-serif;
+  font-family: "Fira Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -5938,7 +5938,7 @@ a.close.disabled {
   z-index: 1060;
   display: block;
   max-width: 276px;
-  font-family: "Roboto", sans-serif;
+  font-family: "Fira Sans", sans-serif;
   font-style: normal;
   font-weight: 400;
   line-height: 1.5;
@@ -6355,13 +6355,14 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #0BCEAF !important;
+  background-color: #235789 !important;
+  background-image: url(/img/bg.jpg);
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #089e86 !important;
+  background-color: #235789 !important;
 }
 
 .bg-secondary {
@@ -6551,7 +6552,7 @@ button.bg-dark:focus {
 }
 
 .rounded-circle {
-  border-radius: 50% !important;
+  border-radius: 10% !important;
 }
 
 .rounded-pill {
@@ -9525,15 +9526,15 @@ button.bg-dark:focus {
 }
 
 .text-primary {
-  color: #0BCEAF !important;
+  color: aqua !important  ;
 }
 
-a.text-primary:hover, a.text-primary:focus {
-  color: #078571 !important;
-}
+/*a.text-primary:hover, a.text-primary:focus {
+  color: #040303 !important;
+} */
 
 .text-secondary {
-  color: #6c757d !important;
+  color: aqua !important;
 }
 
 a.text-secondary:hover, a.text-secondary:focus {
@@ -9747,13 +9748,19 @@ h6,
   padding: 10px 25px;
   border-radius: 100px;
 }
+.fab.fa-linkedin {
+  font-size: 24px; /* Tamaño del ícono */
+  color: #0077B5; /* Color de LinkedIn */
+  
+}
 
 .btn-social {
-  width: 45px;
-  height: 45px;
-  padding-left: 0;
-  padding-right: 0;
+  width: 100px;
+  height: 50px;
+  padding-left: 10;
+  padding-right: 15;
   text-align: center;
+  align-items: center;
   border-radius: 45px;
 }
 
